@@ -1,6 +1,11 @@
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Id: $
 
+  08 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
+  targets/support/kmerge.sh, targets/support/rc-update.sh:
+  Changed some of the rc-update code so it should work with baselayout-2,
+  also. This is 2.0.6_pre2 for testing.
+
   08 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> AUTHORS, catalyst,
   files/catalyst.conf, modules/catalyst_support.py,
   modules/generic_stage_target.py, modules/grp_target.py,
